[gd_scene load_steps=12 format=3 uid="uid://gb27ldv5rvkp"]

[ext_resource type="Script" uid="uid://p5detnxau55l" path="res://characters/hira/scripts/hira.gd" id="1_3m2a5"]
[ext_resource type="Texture2D" uid="uid://cd5mf8ejalxro" path="res://characters/hira/sprites/hiraRework2(animated).png" id="2_3m2a5"]
[ext_resource type="Script" uid="uid://b6vnbf37sfkqa" path="res://scripts/animation_player.gd" id="3_48fr4"]
[ext_resource type="Script" uid="uid://dahf0r6sbb5xh" path="res://classes/animation_step.gd" id="4_81mqv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mrd36"]
size = Vector2(13, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dmrmj"]
size = Vector2(14, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_svlqg"]
size = Vector2(16, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3m2a5"]
size = Vector2(9, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_14y4j"]
size = Vector2(17, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eya2a"]
size = Vector2(23, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8plhj"]
size = Vector2(15, 13)

[node name="hira" type="Node2D"]
texture_filter = 1
script = ExtResource("1_3m2a5")
walk_speed = 5
jump_speed = 6
jump_height = 20
max_jumps = 2
max_air_options = 1
gravity = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-5, 0)
texture = ExtResource("2_3m2a5")
offset = Vector2(2, -32)
hframes = 39
frame = 38

[node name="animation_player" type="Node2D" parent="."]
script = ExtResource("3_48fr4")

[node name="idle" type="Node2D" parent="animation_player"]
visible = false

[node name="1" type="Node2D" parent="animation_player/idle"]
script = ExtResource("4_81mqv")
metadata/_custom_type_script = "uid://dahf0r6sbb5xh"

[node name="hitbox" type="Area2D" parent="animation_player/idle/1"]

[node name="hurtbox" type="Area2D" parent="animation_player/idle/1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animation_player/idle/1/hurtbox"]
position = Vector2(-2.5, -24)
shape = SubResource("RectangleShape2D_mrd36")

[node name="crouch" type="Node2D" parent="animation_player"]
visible = false

[node name="1" type="Node2D" parent="animation_player/crouch"]
script = ExtResource("4_81mqv")
animation_frame = 1
metadata/_custom_type_script = "uid://dahf0r6sbb5xh"

[node name="hitbox" type="Area2D" parent="animation_player/crouch/1"]

[node name="hurtbox" type="Area2D" parent="animation_player/crouch/1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animation_player/crouch/1/hurtbox"]
position = Vector2(-2, -16)
shape = SubResource("RectangleShape2D_dmrmj")

[node name="5A" type="Node2D" parent="animation_player"]
visible = false

[node name="1" type="Node2D" parent="animation_player/5A"]
visible = false
script = ExtResource("4_81mqv")
animation_frame = 24
metadata/_custom_type_script = "uid://dahf0r6sbb5xh"

[node name="hitbox" type="Area2D" parent="animation_player/5A/1"]

[node name="hurtbox" type="Area2D" parent="animation_player/5A/1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animation_player/5A/1/hurtbox"]
position = Vector2(-2.5, -24)
shape = SubResource("RectangleShape2D_mrd36")

[node name="2" type="Node2D" parent="animation_player/5A"]
script = ExtResource("4_81mqv")
frame = 5
animation_frame = 25
is_new_attack = true
hitstun = 12
blockstun = 12
knockback = Vector2i(7, 0)
air_knockback = Vector2i(7, 0)
pushback = 7
hitstop = 20
self_hitstop = 20
cancel_options = ["5A", "jump", "2A", "5B"]
metadata/_custom_type_script = "uid://dahf0r6sbb5xh"

[node name="hitbox" type="Area2D" parent="animation_player/5A/2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animation_player/5A/2/hitbox"]
position = Vector2(6, -33.5)
shape = SubResource("RectangleShape2D_svlqg")
debug_color = Color(0.979246, 0, 0.389617, 0.42)

[node name="hurtbox" type="Area2D" parent="animation_player/5A/2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animation_player/5A/2/hurtbox"]
position = Vector2(-2.5, -24)
shape = SubResource("RectangleShape2D_mrd36")

[node name="3" type="Node2D" parent="animation_player/5A"]
visible = false
script = ExtResource("4_81mqv")
frame = 10
animation_frame = 26
metadata/_custom_type_script = "uid://dahf0r6sbb5xh"

[node name="hitbox" type="Area2D" parent="animation_player/5A/3"]

[node name="hurtbox" type="Area2D" parent="animation_player/5A/3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animation_player/5A/3/hurtbox"]
position = Vector2(-2.5, -24)
shape = SubResource("RectangleShape2D_mrd36")

[node name="2A" type="Node2D" parent="animation_player"]
visible = false

[node name="1" type="Node2D" parent="animation_player/2A"]
visible = false
script = ExtResource("4_81mqv")
animation_frame = 27
metadata/_custom_type_script = "uid://dahf0r6sbb5xh"

[node name="hitbox" type="Area2D" parent="animation_player/2A/1"]

[node name="hurtbox" type="Area2D" parent="animation_player/2A/1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animation_player/2A/1/hurtbox"]
position = Vector2(-2, -16)
shape = SubResource("RectangleShape2D_dmrmj")

[node name="2" type="Node2D" parent="animation_player/2A"]
script = ExtResource("4_81mqv")
frame = 5
animation_frame = 28
is_new_attack = true
hitstun = 11
blockstun = 11
knockback = Vector2i(7, 0)
air_knockback = Vector2i(7, 0)
pushback = 7
hitstop = 20
self_hitstop = 20
cancel_options = ["5A", "jump", "2A", "5B"]
metadata/_custom_type_script = "uid://dahf0r6sbb5xh"

[node name="hitbox" type="Area2D" parent="animation_player/2A/2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animation_player/2A/2/hitbox"]
position = Vector2(9.5, -15.5)
shape = SubResource("RectangleShape2D_3m2a5")
debug_color = Color(0.942899, 0.191258, 0.373125, 0.42)

[node name="hurtbox" type="Area2D" parent="animation_player/2A/2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animation_player/2A/2/hurtbox"]
position = Vector2(-2, -16)
shape = SubResource("RectangleShape2D_dmrmj")

[node name="3" type="Node2D" parent="animation_player/2A"]
visible = false
script = ExtResource("4_81mqv")
frame = 9
animation_frame = 29
metadata/_custom_type_script = "uid://dahf0r6sbb5xh"

[node name="hitbox" type="Area2D" parent="animation_player/2A/3"]

[node name="hurtbox" type="Area2D" parent="animation_player/2A/3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animation_player/2A/3/hurtbox"]
position = Vector2(-2, -16)
shape = SubResource("RectangleShape2D_dmrmj")

[node name="2B" type="Node2D" parent="animation_player"]

[node name="1" type="Node2D" parent="animation_player/2B"]
visible = false
script = ExtResource("4_81mqv")
animation_frame = 34
metadata/_custom_type_script = "uid://dahf0r6sbb5xh"

[node name="hitbox" type="Area2D" parent="animation_player/2B/1"]

[node name="hurtbox" type="Area2D" parent="animation_player/2B/1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animation_player/2B/1/hurtbox"]
position = Vector2(-2, -16)
shape = SubResource("RectangleShape2D_dmrmj")

[node name="2" type="Node2D" parent="animation_player/2B"]
visible = false
script = ExtResource("4_81mqv")
frame = 5
animation_frame = 35
metadata/_custom_type_script = "uid://dahf0r6sbb5xh"

[node name="hitbox" type="Area2D" parent="animation_player/2B/2"]

[node name="hurtbox" type="Area2D" parent="animation_player/2B/2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animation_player/2B/2/hurtbox"]
position = Vector2(-2, -16)
shape = SubResource("RectangleShape2D_dmrmj")

[node name="3" type="Node2D" parent="animation_player/2B"]
visible = false
script = ExtResource("4_81mqv")
frame = 7
animation_frame = 36
is_new_attack = true
hitstun = 18
blockstun = 16
block_type = ["LOW", "AIR"]
knockback = Vector2i(8, 0)
air_knockback = Vector2i(8, 1)
pushback = 8
hitstop = 14
self_hitstop = 14
cancel_options = ["jump"]
metadata/_custom_type_script = "uid://dahf0r6sbb5xh"

[node name="hitbox" type="Area2D" parent="animation_player/2B/3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animation_player/2B/3/hitbox"]
position = Vector2(7.5, -4)
shape = SubResource("RectangleShape2D_14y4j")
debug_color = Color(0.938517, 0.186822, 0.419692, 0.42)

[node name="hurtbox" type="Area2D" parent="animation_player/2B/3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animation_player/2B/3/hurtbox"]
position = Vector2(-6, -16)
shape = SubResource("RectangleShape2D_dmrmj")

[node name="4" type="Node2D" parent="animation_player/2B"]
visible = false
script = ExtResource("4_81mqv")
frame = 11
animation_frame = 37
hitstun = 18
blockstun = 16
block_type = ["LOW", "AIR"]
knockback = Vector2i(8, 0)
air_knockback = Vector2i(8, 1)
pushback = 8
hitstop = 14
self_hitstop = 14
cancel_options = ["jump"]
metadata/_custom_type_script = "uid://dahf0r6sbb5xh"

[node name="hitbox" type="Area2D" parent="animation_player/2B/4"]

[node name="hurtbox" type="Area2D" parent="animation_player/2B/4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animation_player/2B/4/hurtbox"]
position = Vector2(-6, -16)
shape = SubResource("RectangleShape2D_dmrmj")

[node name="5" type="Node2D" parent="animation_player/2B"]
visible = false
script = ExtResource("4_81mqv")
frame = 17
animation_frame = 38
hitstun = 18
blockstun = 16
block_type = ["LOW", "AIR"]
knockback = Vector2i(8, 0)
air_knockback = Vector2i(8, 1)
pushback = 8
hitstop = 14
self_hitstop = 14
cancel_options = ["jump"]
metadata/_custom_type_script = "uid://dahf0r6sbb5xh"

[node name="hitbox" type="Area2D" parent="animation_player/2B/5"]

[node name="hurtbox" type="Area2D" parent="animation_player/2B/5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animation_player/2B/5/hurtbox"]
position = Vector2(-6, -16)
shape = SubResource("RectangleShape2D_dmrmj")

[node name="5B" type="Node2D" parent="animation_player"]

[node name="1" type="Node2D" parent="animation_player/5B"]
visible = false
script = ExtResource("4_81mqv")
animation_frame = 30
metadata/_custom_type_script = "uid://dahf0r6sbb5xh"

[node name="hitbox" type="Area2D" parent="animation_player/5B/1"]

[node name="hurtbox" type="Area2D" parent="animation_player/5B/1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animation_player/5B/1/hurtbox"]
position = Vector2(-2.5, -24)
shape = SubResource("RectangleShape2D_mrd36")

[node name="2" type="Node2D" parent="animation_player/5B"]
visible = false
script = ExtResource("4_81mqv")
frame = 7
animation_frame = 31
is_new_attack = true
hitstun = 20
blockstun = 18
knockback = Vector2i(8, 0)
air_knockback = Vector2i(5, -15)
pushback = 8
hitstop = 20
self_hitstop = 20
cancel_options = ["jump"]
metadata/_custom_type_script = "uid://dahf0r6sbb5xh"

[node name="hitbox" type="Area2D" parent="animation_player/5B/2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animation_player/5B/2/hitbox"]
position = Vector2(7.5, -35)
shape = SubResource("RectangleShape2D_eya2a")
debug_color = Color(0.979246, 0, 0.389617, 0.42)

[node name="hurtbox" type="Area2D" parent="animation_player/5B/2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animation_player/5B/2/hurtbox"]
position = Vector2(-2.5, -24)
shape = SubResource("RectangleShape2D_mrd36")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="animation_player/5B/2/hurtbox"]
position = Vector2(6, -33)
shape = SubResource("RectangleShape2D_eya2a")

[node name="3" type="Node2D" parent="animation_player/5B"]
visible = false
script = ExtResource("4_81mqv")
frame = 13
animation_frame = 32
hitstun = 5
blockstun = 11
knockback = Vector2i(7, 0)
air_knockback = Vector2i(7, 0)
pushback = 7
hitstop = 20
self_hitstop = 20
cancel_options = ["5A", "jump", "2A"]
metadata/_custom_type_script = "uid://dahf0r6sbb5xh"

[node name="hitbox" type="Area2D" parent="animation_player/5B/3"]

[node name="hurtbox" type="Area2D" parent="animation_player/5B/3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animation_player/5B/3/hurtbox"]
position = Vector2(-2.5, -24)
shape = SubResource("RectangleShape2D_mrd36")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="animation_player/5B/3/hurtbox"]
position = Vector2(3.5, -29.5)
shape = SubResource("RectangleShape2D_8plhj")

[node name="4" type="Node2D" parent="animation_player/5B"]
visible = false
script = ExtResource("4_81mqv")
frame = 17
animation_frame = 33
metadata/_custom_type_script = "uid://dahf0r6sbb5xh"

[node name="hitbox" type="Area2D" parent="animation_player/5B/4"]

[node name="hurtbox" type="Area2D" parent="animation_player/5B/4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animation_player/5B/4/hurtbox"]
position = Vector2(-2.5, -24)
shape = SubResource("RectangleShape2D_mrd36")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="animation_player/5B/4/hurtbox"]
position = Vector2(3.5, -29.5)
shape = SubResource("RectangleShape2D_8plhj")

[node name="hitstun" type="Node2D" parent="animation_player"]
visible = false

[node name="1" type="Node2D" parent="animation_player/hitstun"]
script = ExtResource("4_81mqv")
animation_frame = 4
metadata/_custom_type_script = "uid://dahf0r6sbb5xh"

[node name="hitbox" type="Area2D" parent="animation_player/hitstun/1"]

[node name="hurtbox" type="Area2D" parent="animation_player/hitstun/1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animation_player/hitstun/1/hurtbox"]
position = Vector2(-2.5, -24)
shape = SubResource("RectangleShape2D_mrd36")

[node name="stand_blockstun" type="Node2D" parent="animation_player"]
visible = false

[node name="1" type="Node2D" parent="animation_player/stand_blockstun"]
script = ExtResource("4_81mqv")
animation_frame = 2
metadata/_custom_type_script = "uid://dahf0r6sbb5xh"

[node name="hitbox" type="Area2D" parent="animation_player/stand_blockstun/1"]

[node name="hurtbox" type="Area2D" parent="animation_player/stand_blockstun/1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animation_player/stand_blockstun/1/hurtbox"]
position = Vector2(-2.5, -24)
shape = SubResource("RectangleShape2D_mrd36")

[node name="crouch_blockstun" type="Node2D" parent="animation_player"]
visible = false

[node name="1" type="Node2D" parent="animation_player/crouch_blockstun"]
script = ExtResource("4_81mqv")
animation_frame = 3
metadata/_custom_type_script = "uid://dahf0r6sbb5xh"

[node name="hitbox" type="Area2D" parent="animation_player/crouch_blockstun/1"]

[node name="hurtbox" type="Area2D" parent="animation_player/crouch_blockstun/1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="animation_player/crouch_blockstun/1/hurtbox"]
position = Vector2(-2, -16)
shape = SubResource("RectangleShape2D_dmrmj")

[node name="knockdown" type="Node2D" parent="animation_player"]
visible = false

[node name="1" type="Node2D" parent="animation_player/knockdown"]
script = ExtResource("4_81mqv")
animation_frame = 5
metadata/_custom_type_script = "uid://dahf0r6sbb5xh"

[node name="hitbox" type="Area2D" parent="animation_player/knockdown/1"]

[node name="hurtbox" type="Area2D" parent="animation_player/knockdown/1"]
